--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,9 @@
 [pytest]
 markers =
-    xxx: Run xxx module cases
+    info: Run info module cases
 
-addopts = -s --alluredir ./report/allure
+addopts = -s
+
 
 
 
