--- a/requirements.txt
+++ b/requirements.txt
@@ -6,23 +6,38 @@ attrs==19.3.0
 beautifulsoup4==4.9.0
 bs4==0.0.1
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.3
+colorlog==4.1.0
+concurrent-log-handler==0.9.9
+cryptography==2.9.2
 cssselect==1.1.0
+Django==2.0.3
+elasticsearch==7.8.0
 fake-useragent==0.1.11
 Flask==1.0.2
+har2case==0.3.1
+HttpRunner==1.5.8
 idna==2.8
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.10
+kafka-python==1.4.6
 lxml==4.5.0
 MarkupSafe==1.1.1
 more-itertools==8.2.0
+mysqlclient==1.3.12
+nb-log==3.4
 parse==1.15.0
+pika==1.1.0
 pluggy==0.13.1
 py==1.8.1
+pycparser==2.20
+pycryptodome==3.9.7
 pyee==7.0.1
+pymongo==3.5.1
 PyMySQL==0.9.3
 pyppeteer==0.0.25
 pyquery==1.4.1
@@ -30,12 +45,15 @@ pytest==4.5.0
 pytest-html==1.19.0
 pytest-metadata==1.9.0
 PyTestReport==0.2.1
+pytz==2020.1
+pywin32==228
 PyYAML==5.1.2
 requests==2.22.0
 requests-html==0.10.0
 requests-toolbelt==0.9.1
 six==1.14.0
 soupsieve==2.0
+tomorrow3==1.1.0
 tqdm==4.46.0
 urllib3==1.25.9
 w3lib==1.21.0
