upadte pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 markers =
-    info: Run info module cases
+    info: run info module cases
 
 addopts = -s
           --base-url=http://49.235.92.12:6009
